--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,11 +21,12 @@ android {
 apply from: 'dependencies.gradle'
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation supportLibs
+    implementation otherLibs
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     testImplementation unitTestLibs
     androidTestImplementation androidTestLibs
 
-    annotationProcessor annotationProcessorLibs
+    compile 'com.jakewharton:butterknife:8.8.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 }
