--- a/app/dependencies.gradle
+++ b/app/dependencies.gradle
@@ -38,5 +38,5 @@ ext {
     otherLibs = [butterKnife, timber]
     unitTestLibs = unitTestDeps.values()
     androidTestLibs = androidTestDeps.values()
-    annotationProcessorLibs = butterKnifeCompiler
+    annotationProcessorLibs = [butterKnifeCompiler]
 }
