--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,5 @@ dependencies {
     testImplementation unitTestLibs
     androidTestImplementation androidTestLibs
 
-    compile 'com.jakewharton:butterknife:8.8.1'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+    annotationProcessor annotationProcessorLibs
 }
