--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 27
     defaultConfig {
         applicationId "be.manu.statsforleague"
-        minSdkVersion 15
+        minSdkVersion 19
         targetSdkVersion 27
         versionCode 1
         versionName "1.0"
@@ -23,7 +23,8 @@ apply from: 'dependencies.gradle'
 dependencies {
     implementation supportLibs
     implementation otherLibs
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.7'
+
     testImplementation unitTestLibs
     androidTestImplementation androidTestLibs
 
