--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     implementation otherLibs
     implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.7'
 
+    implementation 'com.android.support:support-v4:27.1.0'
     testImplementation unitTestLibs
     androidTestImplementation androidTestLibs
 
