--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,7 @@ dependencies {
 
     implementation 'com.android.support:support-v4:27.1.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation unitTestLibs
     androidTestImplementation androidTestLibs
 
